# tif-exercise-monitoring-system

./: CMakeLists.txt  LICENSE  README.md  SETTINGS.md  main.py  requirements.txt  run.sh  test.py
